# web-dev

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_all.ps1  build_all.sh
.github/workflows/: nodejs-debug.yml  nodejs-release.yml  nodejs.yml
angular/: README.md  angular.json  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.clang-format-config.json  tsconfig.app.clang-format.json  tsconfig.app.demangler.json  tsconfig.app.lighten.json  tsconfig.app.naming-style.json  tsconfig.json  tsconfig.spec.json  vitest.config.ts
angular/src/: index-clang-format-config.html  index-clang-format.html  index-demangler.html  index-lighten.html  index-naming-style.html  index.html  main-clang-format-config.ts  main-clang-format.ts  (+5 more)
cpp/native/: CMakeLists.txt  clang-format-parser.cpp  demangler.cpp  demangler.h  formatter.cpp  formatter.h  lighten.cpp  lighten.h
cpp/native/clang-format-config-migrate/: Format.cpp  Format.h  README.md  update.cpp  update.h
cpp/native/clang-format-config-migrate/10.0.1/: Format.cpp  Format.h  IncludeStyle.cpp
cpp/native/clang-format-config-migrate/11.1.0/: Format.cpp  Format.h  IncludeStyle.cpp
cpp/native/clang-format-config-migrate/12.0.1/: Format.cpp  Format.h  IncludeStyle.cpp  IncludeStyle.h
cpp/native/clang-format-config-migrate/13.0.1/: Format.cpp  Format.h  IncludeStyle.cpp
cpp/native/clang-format-config-migrate/14.0.6/: Format.cpp  Format.h  IncludeStyle.cpp  IncludeStyle.h
cpp/native/clang-format-config-migrate/15.0.7/: Format.cpp  Format.h  IncludeStyle.cpp  IncludeStyle.h
cpp/native/clang-format-config-migrate/16.0.6/: Format.cpp  Format.h  IncludeStyle.cpp  IncludeStyle.h
cpp/native/clang-format-config-migrate/17.0.6/: Format.cpp  Format.h  IncludeStyle.cpp  IncludeStyle.h
cpp/native/clang-format-config-migrate/18.1.8/: Format.cpp  Format.h  IncludeStyle.cpp
cpp/native/clang-format-config-migrate/19.1.6/: Format.cpp  Format.h  IncludeStyle.cpp  IncludeStyle.h
cpp/native/clang-format-config-migrate/20.1.6/: Format.cpp  Format.h  IncludeStyle.cpp  IncludeStyle.h
cpp/native/clang-format-config-migrate/21.1.8/: Format.cpp  Format.h  IncludeStyle.cpp  IncludeStyle.h
cpp/native/clang-format-config-migrate/3.3.0/: Format.h
cpp/native/clang-format-config-migrate/3.4.2/: Format.cpp  Format.h
cpp/native/clang-format-config-migrate/3.5.2/: Format.cpp  Format.h
cpp/native/clang-format-config-migrate/3.6.2/: Format.cpp  Format.h
cpp/native/clang-format-config-migrate/3.7.1/: Format.cpp  Format.h
cpp/native/clang-format-config-migrate/3.8.1/: Format.cpp  Format.h
cpp/native/clang-format-config-migrate/3.9.1/: Format.cpp  Format.h
cpp/native/clang-format-config-migrate/4.0.1/: Format.cpp  Format.h
cpp/native/clang-format-config-migrate/5.0.2/: Format.cpp  Format.h
cpp/native/clang-format-config-migrate/6.0.1/: Format.cpp  Format.h
cpp/native/clang-format-config-migrate/7.1.0/: Format.cpp  Format.h  IncludeStyle.cpp  IncludeStyle.h
cpp/native/clang-format-config-migrate/8.0.1/: Format.cpp  Format.h  IncludeStyle.h
cpp/native/clang-format-config-migrate/9.0.1/: Format.cpp  Format.h  IncludeStyle.cpp  IncludeStyle.h
cpp/native/clang-format-options-update/: Format.cpp  Format.h  update.cpp  update.h
cpp/native/clang-format-options-update/10.0.1/: Format.cpp  Format.h
cpp/native/clang-format-options-update/11.1.0/: Format.cpp  Format.h  IncludeStyle.h
cpp/native/clang-format-options-update/12.0.1/: Format.cpp  Format.h
cpp/native/clang-format-options-update/13.0.1/: Format.cpp  Format.h  IncludeStyle.h
cpp/native/clang-format-options-update/14.0.6/: Format.cpp  Format.h
cpp/native/clang-format-options-update/15.0.7/: Format.cpp  Format.h
cpp/native/clang-format-options-update/16.0.6/: Format.cpp  Format.h  IncludeStyle.h
cpp/native/clang-format-options-update/17.0.6/: Format.cpp  Format.h  IncludeStyle.h
cpp/native/clang-format-options-update/18.1.8/: Format.cpp  Format.h  IncludeStyle.h
cpp/native/clang-format-options-update/19.1.6/: Format.cpp  Format.h
cpp/native/clang-format-options-update/3.3.0/: Format.cpp  Format.h
cpp/native/clang-format-options-update/3.4.2/: Format.cpp  Format.h
cpp/native/clang-format-options-update/3.5.2/: Format.cpp  Format.h
cpp/native/clang-format-options-update/3.6.2/: Format.cpp  Format.h
cpp/native/clang-format-options-update/3.7.1/: Format.cpp  Format.h
cpp/native/clang-format-options-update/3.8.1/: Format.cpp  Format.h
cpp/native/clang-format-options-update/3.9.1/: Format.cpp  Format.h
cpp/native/clang-format-options-update/4.0.1/: Format.cpp  Format.h
cpp/native/clang-format-options-update/5.0.2/: Format.cpp  Format.h
cpp/native/clang-format-options-update/6.0.1/: Format.cpp  Format.h
cpp/native/clang-format-options-update/7.1.0/: Format.cpp  Format.h  IncludeStyle.cpp
cpp/native/clang-format-options-update/8.0.1/: Format.cpp  Format.h
cpp/native/clang-format-options-update/9.0.1/: Format.cpp  Format.h
cpp/tests/: CMakeLists.txt  clang-format-config-migrate.cpp  clang-format-options-update.cpp  lighten-number.cpp
cpp/tests/data/config-file/: chromium-10.cfg  chromium-11.cfg  chromium-12.cfg  chromium-13.cfg  chromium-14.cfg  chromium-15.cfg  chromium-16.cfg  chromium-17.cfg  chromium-18.cfg  chromium-19.cfg  chromium-3_4.cfg  chromium-3_5.cfg  chromium-3_6.cfg  chromium-3_7.cfg  chromium-3_8.cfg  chromium-3_9.cfg  chromium-4.cfg  chromium-5.cfg  chromium-6.cfg  chromium-7.cfg  chromium-8.cfg  chromium-9.cfg  clang-format-18.cfg  clang-format-19.cfg  clang-format-20.cfg  clang-format-21.cfg  gnu-10.cfg  gnu-11.cfg  gnu-12.cfg  gnu-13.cfg  gnu-14.cfg  gnu-15.cfg  gnu-16.cfg  gnu-17.cfg  gnu-18.cfg  gnu-19.cfg  gnu-3_5.cfg  gnu-3_6.cfg  gnu-3_7.cfg  gnu-3_8.cfg  (+101 more)
cpp/webassembly/: CMakeLists.txt  web-clang-format-config-migrate.cpp  web-clang-format-options-update.cpp  web-demangler.cpp  web-formatter.cpp  web-lighten.cpp
src/: web-clang-tidy-readability-identifier-naming.cpp  web-demangler.cpp  web-formatter.cpp
utils/: CMakeLists.txt  clang-format-parser.cpp
(+87 files in other folders)
